tests/checker/ok/parameterized_type_in_expression.can
Content = String

Described = String

Option => Described {
    Option -> (
        * None => Described { "none" }
        * Some<Content> => Described { "some" }
    )
}

Unit => Program {
    Content("hi")
        -> Some
        -> Described
        -> Print
}
