tests/checker/fail/dead_code.can
Unused = String

Unit => Program {
    "hi" -> Print
}
